--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="shortcut icon" type="image/png" href="img/icon.png" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
+      href="https://fonts.cdnfonts.com/css/gt-maru"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Bankist | When Banking meets Minimalist</title>
+    <title>Speak your mind | Aqurilla</title>
 
     <script defer src="script.js"></script>
   </head>
@@ -56,7 +56,7 @@
         <h4>A simpler banking experience for a simpler life.</h4>
         <button class="btn--text btn--scroll-to">Learn more &DownArrow;</button>
         <img
-          src="img/hero.png"
+          src="https://media.discordapp.net/attachments/699871057120854056/1144252399444295760/cover.png?width=792&height=701"
           class="header__img"
           alt="Minimalist bank items"
         />
