--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h4>A simpler banking experience for a simpler life.</h4>
         <button class="btn--text btn--scroll-to">Learn more &DownArrow;</button>
         <img
-          src="https://media.discordapp.net/attachments/699871057120854056/1144252399444295760/cover.png?width=792&height=701"
+          src="img/cover.png"
           class="header__img"
           alt="Minimalist bank items"
         />
