--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <nav class="nav">
         <img
-          src="img/cover.png"
+          src="https://cdn.discordapp.com/attachments/699871057120854056/1144246732478238730/sdsdadas.png"
           alt="Aqurilla"
           class="nav__logo"
           id="logo"
