--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         />
         <ul class="nav__links">
           <li class="nav__item">
-            <a class="nav__link" href="blog.aqurilla.com">Blog</a>
+            <a class="nav__link" href="https://blog.aqurilla.com">Blog</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="/terms">Terms of Service</a>
@@ -37,7 +37,7 @@
             <a class="nav__link" href="/privacy">Privacy Policy</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__link--btn btn--show-modal" href="app.aqurilla.com/signup"
+            <a class="nav__link nav__link--btn btn--show-modal" href="https://app.aqurilla.com/signup"
               >Signup</a
             >
           </li>
@@ -67,7 +67,7 @@
           <a class="footer__link" href="/privacy">Privacy Policy</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="blog.aqurilla.com">Blog</a>
+          <a class="footer__link" href="https://blog.aqurilla.com">Blog</a>
         </li>
       </ul>
       <img src="https://media.discordapp.net/attachments/699871057120854056/1143098747912466482/tent.png?width=701&height=701" alt="Logo" class="footer__logo" />
