--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="https://app.aqurilla.com/Favicon/favicon.ico/>
+    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/699871057120854056/1143098747912466482/tent.png>
 
     <link
       href="https://fonts.cdnfonts.com/css/gt-maru"
@@ -70,7 +70,7 @@
           <a class="footer__link" href="https://blog.aqurilla.com">Blog</a>
         </li>
       </ul>
-      <img src="https://media.discordapp.net/attachments/699871057120854056/1143098747912466482/tent.png?width=701&height=701" alt="Logo" class="footer__logo" />
+      <img src="https://media.discordapp.net/attachments/699871057120854056/1143098747660812298/logo.png" alt="Logo" class="footer__logo" />
       <p class="footer__copyright">
         &copy; Copyright 2023 - Aqurilla Social, Inc.
       </p>
