--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/699871057120854056/1143098747912466482/tent.png>
+    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/699871057120854056/1143098747912466482/tent.png">
 
     <link
       href="https://fonts.cdnfonts.com/css/gt-maru"
