--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           Speak your mind.
         </h1>
         <h4>Signup with Aqurilla today!</h4>
-        <button class="btn--text btn--scroll-to">Download the Aqurilla Desktop app today!</button>
+        <button class="btn--text btn--scroll-to" onclick="window.location.href = 'https://aqurilladownload.rollviral.repl.co/download';">Download the Aqurilla Desktop app today!</button>
         <img
           src="https://media.discordapp.net/attachments/699871057120854056/1144252399444295760/cover.png?width=792&height=701"
           class="header__img"
