--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             <a class="nav__link" href="/privacy">Privacy Policy</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__link--btn btn--show-modal" href="https://app.aqurilla.com/signup"
-              >Signup</a
-            >
+            <a class="nav__link nav__link--btn" href="https://app.aqurilla.com/signup">Signup</a>
           </li>
         </ul>
       </nav>
