--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/699871057120854056/1143098747912466482/tent.png">
-
+    <meta name="description" content="Join Aqurilla, the innovative social media platform that offers endless possibilities. Explore a world of connections through infinite scrolling, where creativity knows no bounds. Sign up now to experience a new dimension of social networking." />
     <link
       href="https://fonts.cdnfonts.com/css/gt-maru"
       rel="stylesheet"
