--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="nav">
         <img
-          src="https://cdn.discordapp.com/attachments/699871057120854056/1144246732478238730/sdsdadas.png"
+          src="https://aqurilla.com/img/NavbarImage.png"
           alt="Aqurilla"
           class="nav__logo"
           id="logo"
@@ -48,9 +48,9 @@
         <h4>Signup with Aqurilla today!</h4>
         <button class="btn--text btn--scroll-to" onclick="window.location.href = 'https://aqurilladownload.rollviral.repl.co/download';">Download the Aqurilla Desktop app today!</button>
         <img
-          src="https://media.discordapp.net/attachments/699871057120854056/1144252399444295760/cover.png?width=792&height=701"
+          src="https://aqurilla.com/img/cover.png"
           class="header__img"
-          alt="Minimalist bank items"
+          alt="Minimalist Cover items"
         />
       </div>
     </header>
