--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a class="footer__link" href="https://blog.aqurilla.com">Blog</a>
         </li>
       </ul>
-      <img src="https://media.discordapp.net/attachments/699871057120854056/1143098747660812298/logo.png" alt="Logo" class="footer__logo" />
+      <img src="https://aqurilla.com/img/AqurillaIcon.png" alt="Logo" class="footer__logo" />
       <p class="footer__copyright">
         &copy; Copyright 2023 - Aqurilla Social, Inc.
       </p>
