--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.cdnfonts.com/css/gt-maru"
       rel="stylesheet"
     />
+<link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
     <link rel="stylesheet" href="style.css" />
     <title>Speak your mind | Aqurilla</title>
   </head>
