--- a/index.html
+++ b/index.html
@@ -13,8 +13,29 @@
 <link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
     <link rel="stylesheet" href="style.css" />
     <title>Speak your mind | Aqurilla</title>
+<style>
+        .banner {
+            background-color: #ffc34d;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            font-size: 18px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 9999;
+        }
+        .banner a {
+            color: white;
+            font-weight: bold;
+            text-decoration: underline;
+        }
+    </style>
   </head>
   <body>
+    <div class="banner">
+        <p>🚀 Hey there! Exciting news from <strong>Aqurilla</strong>! We've just updated our <a href="https://aqurilla.com/terms">Terms of Service</a>, <a href="https://aqurilla.com/privacy">Privacy Policy</a>, and <a href="https://aqurilla.com/community">Community Guidelines</a>. Stay in the loop!</p>
     <header class="header">
       <nav class="nav">
         <img
