--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <p>🚀 Hey there! Exciting news from <strong>Aqurilla</strong>! We've just updated our <a href="https://aqurilla.com/terms">Terms of Service</a>, <a href="https://aqurilla.com/privacy">Privacy Policy</a>, and <a href="https://aqurilla.com/community">Community Guidelines</a>. Stay in the loop!</p>
     <header class="header">
       <nav class="nav">
+      </div>
         <img
           src="https://aqurilla.com/img/NavbarImage.png"
           alt="Aqurilla"
