--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             text-align: center;
             padding: 10px;
             font-size: 18px;
-            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
@@ -36,9 +35,9 @@
   <body>
     <div class="banner">
         <p>🚀 Hey there! Exciting news from <strong>Aqurilla</strong>! We've just updated our <a href="https://aqurilla.com/terms">Terms of Service</a>, <a href="https://aqurilla.com/privacy">Privacy Policy</a>, and <a href="https://aqurilla.com/community">Community Guidelines</a>. Stay in the loop!</p>
-    <header class="header">
+    </div>div>
+<header class="header">
       <nav class="nav">
-      </div>
         <img
           src="https://aqurilla.com/img/NavbarImage.png"
           alt="Aqurilla"
