--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <div class="banner">
         <p>🚀 Hey there! Exciting news from <strong>Aqurilla</strong>! We've just updated our <a href="https://aqurilla.com/terms">Terms of Service</a>, <a href="https://aqurilla.com/privacy">Privacy Policy</a>, and <a href="https://aqurilla.com/community">Community Guidelines</a>. Stay in the loop!</p>
-    </div>div>
+    </div>
 <header class="header">
       <nav class="nav">
         <img
