--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Speak your mind | Aqurilla</title>
 <style>
         .banner {
-            background-color: #ffc34d;
+            background-color: #ff4d4d;
             color: white;
             text-align: center;
             padding: 10px;
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="banner">
-        <p>🚀 Hey there! Exciting news from <strong>Aqurilla</strong>! We've just updated our <a href="https://aqurilla.com/terms">Terms of Service</a>, <a href="https://aqurilla.com/privacy">Privacy Policy</a>, and <a href="https://aqurilla.com/community">Community Guidelines</a>. Stay in the loop!</p>
+        <p>Aqurilla is currently unavailable for all users - Any existing users on the platform have been notified of our changes via email.</p>
     </div>
 <header class="header">
       <nav class="nav">
@@ -57,7 +57,7 @@
             <a class="nav__link" href="/privacy">Privacy Policy</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__link--btn" href="https://app.aqurilla.com/signup">Signup</a>
+            <a class="nav__link nav__link--btn" href="/">Signup Disabled</a>
           </li>
         </ul>
       </nav>
@@ -68,7 +68,7 @@
           Speak your mind.
         </h1>
         <h4>Signup with Aqurilla today!</h4>
-        <button class="btn--text btn--scroll-to" onclick="window.location.href = 'https://aqurilladownload.rollviral.repl.co/download';">Download the Aqurilla Desktop app today!</button>
+        <button class="btn--text btn--scroll-to" onclick="window.location.href = '/;">Client Download Disabled</button>
         <img
           src="https://aqurilla.com/img/cover.png"
           class="header__img"
@@ -90,7 +90,7 @@
       </ul>
       <img src="https://aqurilla.com/img/AqurillaIcon.png" alt="Logo" class="footer__logo" />
       <p class="footer__copyright">
-        &copy; Copyright 2023 - Aqurilla Social, Inc.
+        &copy; Copyright 2023 - Aqurilla, Inc.
       </p>
     </footer>
 
