--- a/index.html
+++ b/index.html
@@ -3,116 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/699871057120854056/1143098747912466482/tent.png">
-    <meta name="description" content="Pitch a tent on Aqurilla and Speak your mind. Join the community of users speaking the world of today and tomorrowland, sign up now for free!">
-    <link href="https://fonts.cdnfonts.com/css/gt-maru" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Speak your mind | Aqurilla</title>
+    <title>Camphouse</title>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png" type="image/png">
     <style>
-        /* Default styles */
-        .banner {
-            background-color: #ff4d4d;
-            color: white;
+        body {
+            background-color: white;
             text-align: center;
-            padding: 10px;
-            font-size: 18px;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 9999;
         }
-
-        .banner a {
-            color: white;
-            font-weight: bold;
-            text-decoration: underline;
-        }
-
-        /* Responsive styles */
-        @media (max-width: 768px) {
-            /* Adjust styles for smaller screens */
-            .header {
-                padding: 20px;
-            }
-
-            .nav__links {
-                display: none;
-            }
-
-            .nav__link--btn {
-                display: none;
-            }
-
-            .header__title h1 {
-                font-size: 24px;
-            }
-
-            .header__title h4 {
-                font-size: 16px;
-            }
+        #centered-image {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 <body>
-<div class="banner">
-    <p>Aqurilla is currently unavailable for all users - Any existing users on the platform have been notified of our changes via email.</p>
-</div>
-<header class="header">
-    <nav class="nav">
-        <img
-            src="https://aqurilla.com/img/NavbarImage.png"
-            alt="Aqurilla"
-            class="nav__logo"
-            id="logo"
-            designer="app.aqurilla.com/@jksn"
-            data-version-number="3.0"
-        />
-        <ul class="nav__links">
-            <li class="nav__item">
-                <a class="nav__link" href="https://blog.aqurilla.com">Blog</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link" href="/terms">Terms of Service</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link" href="/privacy">Privacy Policy</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link nav__link--btn" href="/">Signup Disabled</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="header__title">
-        <h1>
-            Speak your mind.
-        </h1>
-        <h4>Signup with Aqurilla today!</h4>
-        <button class="btn--text btn--scroll-to" onclick="window.location.href = '/;">Client Download Disabled</button>
-        <img
-            src="https://aqurilla.com/img/cover.png"
-            class="header__img"
-            alt="Minimalist Cover items"
-        />
+    <div id="centered-image">
+        <img src="https://media.discordapp.net/attachments/1143365802775560202/1151041628841185331/image.png?width=1246&height=701" alt="Camphouse">
     </div>
-</header>
-<footer class="footer">
-    <ul class="footer__nav">
-        <li class="footer__item">
-            <a class="footer__link" href="/terms">Terms of Service</a>
-        </li>
-        <li class="footer__item">
-            <a class="footer__link" href="/privacy">Privacy Policy</a>
-        </li>
-        <li class="footer__item">
-            <a class="footer__link" href="https://blog.aqurilla.com">Blog</a>
-        </li>
-    </ul>
-    <img src="https://aqurilla.com/img/AqurillaIcon.png" alt="Logo" class="footer__logo" />
-    <p class="footer__copyright">
-        &copy; Copyright 2023 - Aqurilla, Inc.
-    </p>
-</footer>
 </body>
 </html>
