--- a/index.html
+++ b/index.html
@@ -4,23 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camphouse</title>
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png">
     <style>
         body {
-            background-color: white;
+            margin: 0;
+            padding: 0;
+            background-color: #ffc34d;
+            font-family: 'Nunito', sans-serif;
             text-align: center;
+            color: black;
         }
-        #centered-image {
+        .container {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
+        .logo {
+            max-width: 75%;
+            height: auto;
+        }
+        .text {
+            font-size: 34px;
+            margin-top: 20px;
+            font-weight: 800;
+        }
     </style>
 </head>
 <body>
-    <div id="centered-image">
-        <img src="https://media.discordapp.net/attachments/1143365802775560202/1151041628841185331/image.png?width=1246&height=701" alt="Camphouse">
+    <div class="container">
+        <img src="https://cdn.discordapp.com/attachments/742574117735235644/1152546840701575220/camphouse-bt.png" alt="Camphouse Logo" class="logo">
+        <p class="text">We are working on a new version of the app, please be pacient.</p>
     </div>
 </body>
 </html>
