--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://media.discordapp.net/attachments/699871057120854056/1143098747912466482/tent.png?width=701&height=701">
     <link rel="stylesheet" href="https://https://fonts.cdnfonts.com/css/gt-maru">
 <link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
-    <title>Privacy Policy | Aqurilla</title>
+    <title>Privacy Policy | Camphouse</title>
     <style>
         body {
             font-family: 'GT Maru', "new-spirit", sans-serif;
@@ -41,10 +41,10 @@
             <img src="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png" alt="Logo">
         </div>
         <h1>Privacy Policy</h1>
-        <i>Last Updated August, 27th 2023</i>
+        <i>Last Updated September, 19th 2023</i>
         <h2>1. Introduction</h2>
 
-<p>Welcome to Aqurilla's Privacy Policy. This policy outlines how we collect, use, disclose, and protect your personal information when you use our website ("Website") and associated services, applications, and features (collectively referred to as "Services"). By accessing or using our Services, you agree to the practices described in this Privacy Policy. If you do not agree with our practices, please do not use our Services.</p>
+<p>Welcome to Camphouse's Privacy Policy. This policy outlines how we collect, use, disclose, and protect your personal information when you use our website ("Website") and associated services, applications, and features (collectively referred to as "Services"). By accessing or using our Services, you agree to the practices described in this Privacy Policy. If you do not agree with our practices, please do not use our Services.</p>
 
 <h2>2. Information We Collect</h2>
 
@@ -66,7 +66,7 @@
 
 <h2>4. Information Sharing and Disclosure</h2>
 
-<p><b>a. Public Content:</b> Any content you post or share publicly on Aqurilla may be visible to other users and the public.</p>
+<p><b>a. Public Content:</b> Any content you post or share publicly on Camphouse may be visible to other users and the public.</p>
 
 <p><b>b. Service Providers:</b> We may share your information with third-party service providers who assist us in delivering our Services, such as hosting, data analysis, and customer support.</p>
 
@@ -88,7 +88,7 @@
 
 <h2>7. Children's Privacy</h2>
 
-<p>Aqurilla is not intended for use by individuals under the age of 13. If you are a parent or guardian and believe your child has provided personal information on our platform, please contact us immediately.</p>
+<p>Camphouse is not intended for use by individuals under the age of 13. If you are a parent or guardian and believe your child has provided personal information on our platform, please contact us immediately.</p>
 
 <h2>8. International Transfers</h2>
 
@@ -98,7 +98,7 @@
 
 <p>We may update this Privacy Policy to reflect changes in our practices or legal requirements. We will provide notice of any material changes by posting a prominent notice on our Website or through other communication methods.</p>
         <h2>Contact Us</h2>
-        <p>If you have any questions about these Privacy Policy, please contact us at support@aqurilla.com</p>
+        <p>If you have any questions about these Privacy Policy, please contact us at support@camphouse.net</p>
     </div>
 </body>
 </html>
