--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://media.discordapp.net/attachments/699871057120854056/1143098747912466482/tent.png?width=701&height=701">
     <link rel="stylesheet" href="https://https://fonts.cdnfonts.com/css/gt-maru">
 <link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
-    <title>Terms of Service | Aqurilla</title>
+    <title>Terms of Service | Camphouse</title>
     <style>
         body {
             font-family: 'GT Maru', "new-spirit", sans-serif;
@@ -44,12 +44,12 @@
         <i>Last Updated August, 27th 2023</i>
         
         <h2>1. Acceptance of Terms</h2>
-        <p>Welcome to Aqurilla, a plce where you can create postd and Speak your mind. These Terms of Service ("Terms") govern your use of the Aqurilla website ("Website"), associated services, applications, and features (collectively referred to as "Services"). By accessing or using our Services, you agree to abide by these Terms. If you do not agree with these Terms, please refrain from using our Services.</p>
+        <p>Welcome to Camphouse, a plce where you can create postd and Speak your mind. These Terms of Service ("Terms") govern your use of the Camphouse website ("Website"), associated services, applications, and features (collectively referred to as "Services"). By accessing or using our Services, you agree to abide by these Terms. If you do not agree with these Terms, please refrain from using our Services.</p>
 
 <h2>2. Eligibility</h2>
-        <p>You must be at least 13 years of age to use Aqurilla. If you are accessing our Services on behalf of a company or entity, you confirm that you have the authority to bind such entity to these Terms. If you are under 18 years of age, you affirm that you have obtained consent from a parent or legal guardian to use our Services.</p>
+        <p>You must be at least 13 years of age to use Camphouse. If you are accessing our Services on behalf of a company or entity, you confirm that you have the authority to bind such entity to these Terms. If you are under 18 years of age, you affirm that you have obtained consent from a parent or legal guardian to use our Services.</p>
 <h2>3. User Conduct</h2>
-        <p>Aqurilla promotes a respectful and inclusive environment for all users. By using our Services, you agree not to engage in any conduct that:</p>
+        <p>Camphouse promotes a respectful and inclusive environment for all users. By using our Services, you agree not to engage in any conduct that:</p>
 
 
  <p>- Violates any applicable laws or regulations.</p>
@@ -66,35 +66,35 @@
 
  <p>- Interferes with the operation of our Services or disrupts the experiences of others.</p>
 <h2>4. Content</h2>
-<p>Aqurilla encourages the sharing of creative and diverse content. By posting, uploading, or sharing content on our platform, you grant us a non-exclusive, royalty-free, worldwide license to use, display, reproduce, modify, adapt, and distribute the content for the purpose of providing and improving our Services. You retain ownership of your content.</p>
+<p>Camphouse encourages the sharing of creative and diverse content. By posting, uploading, or sharing content on our platform, you grant us a non-exclusive, royalty-free, worldwide license to use, display, reproduce, modify, adapt, and distribute the content for the purpose of providing and improving our Services. You retain ownership of your content.</p>
 
-<p>You acknowledge that Aqurilla does not endorse, control, or monitor all user-generated content. We reserve the right to remove or restrict content that violates these Terms or is otherwise deemed inappropriate, without prior notice.</p>
+<p>You acknowledge that Camphouse does not endorse, control, or monitor all user-generated content. We reserve the right to remove or restrict content that violates these Terms or is otherwise deemed inappropriate, without prior notice.</p>
 <h2>5. Intellectual Property</h2>
 
-<p>Aqurilla respects intellectual property rights and expects users to do the same. You must not post, share, or use content that infringes upon the intellectual property rights of others. If you believe your work has been copied in a manner that constitutes copyright infringement, please notify us as outlined in our Copyright Policy.</p>
+<p>Camphouse respects intellectual property rights and expects users to do the same. You must not post, share, or use content that infringes upon the intellectual property rights of others. If you believe your work has been copied in a manner that constitutes copyright infringement, please notify us as outlined in our Copyright Policy.</p>
 <h2>6. Privacy</h2>
 <p>Please refer to our Privacy Policy for detailed information on how we collect, use, and protect your personal information.</p>
 <h2>7. Accounts</h2>
-<p>To access Aqurilla, you may need to create an account. You are responsible for maintaining the confidentiality of your account information, including your email address and password. You agree to notify us immediately of any unauthorized use of your account or any other security breach.</p>
+<p>To access Camphouse, you may need to create an account. You are responsible for maintaining the confidentiality of your account information, including your email address and password. You agree to notify us immediately of any unauthorized use of your account or any other security breach.</p>
 <h2>8. Termination</h2>
-<p>Aqurilla reserves the right to terminate your account at any time and for any reason, without prior notice. You may also choose to terminate your account by contacting our support team. Upon termination, your access to the Services will cease, and your content may be removed from our platform.</p>
+<p>Camphouse reserves the right to terminate your account at any time and for any reason, without prior notice. You may also choose to terminate your account by contacting our support team. Upon termination, your access to the Services will cease, and your content may be removed from our platform.</p>
 <h2>9. Disclaimers</h2>
-<p>Aqurilla provides its Services on an "as is" and "as available" basis, without warranties of any kind, either express or implied. We do not guarantee that our Services will be uninterrupted, secure, or error-free. You acknowledge that you use our Services at your own risk.</p>
+<p>Camphouse provides its Services on an "as is" and "as available" basis, without warranties of any kind, either express or implied. We do not guarantee that our Services will be uninterrupted, secure, or error-free. You acknowledge that you use our Services at your own risk.</p>
 <h2>10. Limitation of Liability</h2>
-<p>To the extent permitted by law, Aqurilla shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses resulting from your use of our Services.</p>
+<p>To the extent permitted by law, Camphouse shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses resulting from your use of our Services.</p>
 <h2>11. Indemnification</h2>
 
-<p>You agree to indemnify and hold Aqurilla, its affiliates, employees, agents, and partners harmless from any claims, losses, liabilities, and expenses (including legal fees) arising out of or in connection with your use of our Services, your content, or your violation of these Terms.</p>
+<p>You agree to indemnify and hold Camphouse, its affiliates, employees, agents, and partners harmless from any claims, losses, liabilities, and expenses (including legal fees) arising out of or in connection with your use of our Services, your content, or your violation of these Terms.</p>
 
 <h2>12. Modifications to Terms</h2>
 
-<p>Aqurilla reserves the right to update, modify, or replace these Terms at any time. We will provide notice of any material changes by posting a prominent notice on our Website or through other communication methods. Your continued use of our Services after such changes constitute your acceptance of the modified Terms.</p>
+<p>Camphouse reserves the right to update, modify, or replace these Terms at any time. We will provide notice of any material changes by posting a prominent notice on our Website or through other communication methods. Your continued use of our Services after such changes constitute your acceptance of the modified Terms.</p>
 
 <h2>13. Governing Law</h2>
 
 <p>These Terms are governed by and construed in accordance with the laws of Australia, without regard to its conflict of law principles.</p>
         <h2>Contact Us</h2>
-        <p>If you have any questions about these Terms of Service, please contact us at support@aqurilla.com</p>
+        <p>If you have any questions about these Terms of Service, please contact us at support@camphouse.net</p>
     </div>
 </body>
 </html>
