--- a/community.html
+++ b/community.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://media.discordapp.net/attachments/699871057120854056/1143098747912466482/tent.png?width=701&height=701">
     <link rel="stylesheet" href="https://https://fonts.cdnfonts.com/css/gt-maru">
 <link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
-    <title>Community Guidelines | Aqurilla</title>
+    <title>Community Guidelines | Camphouse</title>
     <style>
         body {
             font-family: 'GT Maru', "new-spirit", sans-serif;
@@ -44,7 +44,7 @@
         <i>Last Updated August, 27th 2023</i>
         <h2>Introduction</h2>
 
-<p>Hey there, creative souls! ✨ Ready to dive into the electric currents of inspiration and connect with fellow artists? Welcome to Aqurilla, where imagination knows no bounds and the vibes are always positive. To make sure everyone has a blast, we've put together these groovy Community Guidelines that lay down the law (the cool kind, of course). So, let's rock and roll!</p>
+<p>Hey there, creative souls! ✨ Ready to dive into the electric currents of inspiration and connect with fellow artists? Welcome to Camphouse, where imagination knows no bounds and the vibes are always positive. To make sure everyone has a blast, we've put together these groovy Community Guidelines that lay down the law (the cool kind, of course). So, let's rock and roll!</p>
 
 <h2>1. Embrace Positivity and Respect</h2>
 
@@ -56,7 +56,7 @@
 
 <h2>3. Nix the Crypto Stuff</h2>
 
-<p>We're into all things artistic and innovative, but we're not boarding the crypto train here. No cryptocurrencies or NFTs (Non-Fungible Tokens) on Aqurilla, folks. This platform is for sharing your creative masterpieces, not for trading digital currencies.</p>
+<p>We're into all things artistic and innovative, but we're not boarding the crypto train here. No cryptocurrencies or NFTs (Non-Fungible Tokens) on Camphouse, folks. This platform is for sharing your creative masterpieces, not for trading digital currencies.</p>
 
 <h2>4. Share Your Original Grooves</h2>
 
@@ -72,7 +72,7 @@
 
 <h2>7. The Power of Unity</h2>
 
-<p>Remember, Aqurilla is a creative haven where we come together to lift each other up. Connect, collaborate, and create some magic. Let's grow and thrive as a creative collective!</p>
+<p>Remember, Camphouse is a creative haven where we come together to lift each other up. Connect, collaborate, and create some magic. Let's grow and thrive as a creative collective!</p>
 
 <h2>8. Be Mindful of Our Earth</h2>
 
@@ -83,16 +83,16 @@
 <p>We're all about the exploration of new horizons, genres, and styles. Keep evolving and experimenting, and inspire others to do the same. We're in this journey together, and the sky's the limit!</p>
 
 <h2>10. Keep it spam-free</h2>
-<p> We all know how Spam is salty, don't lie! But here at Aqurilla, we want our communities to be spam free, both salty and the overkill text, this means no</p>
+<p> We all know how Spam is salty, don't lie! But here at Camphouse, we want our communities to be spam free, both salty and the overkill text, this means no</p>
 <p> - Long text in post titles, descriptions, usernames, handles, bios, ect, ect.</p>
 
 <h2>Our Tunes Can Change</h2>
 
 <p>Just like a melody evolves, so can our guidelines. We might groove to a different tune as time goes on, and if that happens, we'll keep you in the loop. Your creativity drives the beat, after all!</p>
 
-<p>So there you have it, fellow creators! Let's make Aqurilla a place where innovation, connection, and positivity collide. Together, we'll create a masterpiece of a community. Now, let's get out there and paint the town with our creative vibes! 🌈🎨</p>
+<p>So there you have it, fellow creators! Let's make Camphouse a place where innovation, connection, and positivity collide. Together, we'll create a masterpiece of a community. Now, let's get out there and paint the town with our creative vibes! 🌈🎨</p>
         <h2>Contact Us</h2>
-        <p>If you have any questions about these Community Guidelines, please contact us at support@aqurilla.com</p>
+        <p>If you have any questions about these Community Guidelines, please contact us at support@camphouse.net</p>
     </div>
 </body>
 </html>
