--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png">
     <meta property="og:title" content="Camphouse">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1143365802775560202/1152554887897423872/image.png">
     <meta property="og:url" content="https://www.camphouse.net">
     <meta property="og:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
+    <meta property="theme-color" content="#ffc34d" />
 
     <!-- Twitter specific meta tags -->
     <meta name="twitter:card" content="summary_large_image">
