--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Twitter specific meta tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@YourTwitterHandle"> <!-- Replace with your Twitter handle -->
+    <meta name="twitter:site" content="@CamphouseApp"> <!-- Replace with your Twitter handle -->
     <meta name="twitter:title" content="Camphouse">
     <meta name="twitter:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
     <meta name="twitter:image:src" content="https://cdn.discordapp.com/attachments/1143365802775560202/1152554887897423872/image.png">
