--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camphouse</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png">
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1152564234404773888/1152564331616149574/tent-v2.png">
     <meta property="og:title" content="Camphouse">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/1143365802775560202/1152554887897423872/image.png">
@@ -25,7 +25,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #ffc34d;
+            background-color: #ffffff;
             font-family: 'Nunito', sans-serif;
             text-align: center;
             color: black;
@@ -49,8 +49,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://cdn.discordapp.com/attachments/742574117735235644/1152546840701575220/camphouse-bt.png" alt="Camphouse Logo" class="logo">
-        <p class="text">We are working on a new version of the app, please be pacient.</p>
+        <img src="https://cdn.discordapp.com/attachments/1152564234404773888/1152564331960074280/camphouse3.png" alt="Camphouse Logo" class="logo">
+        <p class="text">Coming Soon</p>
     </div>
 </body>
 </html>
