--- a/community.html
+++ b/community.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://media.discordapp.net/attachments/699871057120854056/1143098747912466482/tent.png?width=701&height=701">
+    <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="https://https://fonts.cdnfonts.com/css/gt-maru">
 <link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
     <title>Community Guidelines | Camphouse</title>
@@ -38,10 +38,10 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png" alt="Logo">
+            <img src="img/icon.png" alt="Logo">
         </div>
         <h1>Community Guidelines</h1>
-        <i>Last Updated August, 27th 2023</i>
+        <i>Last Updated September, 17th 2023</i>
         <h2>Introduction</h2>
 
 <p>Hey there, creative souls! ✨ Ready to dive into the electric currents of inspiration and connect with fellow artists? Welcome to Camphouse, where imagination knows no bounds and the vibes are always positive. To make sure everyone has a blast, we've put together these groovy Community Guidelines that lay down the law (the cool kind, of course). So, let's rock and roll!</p>
