--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://media.discordapp.net/attachments/699871057120854056/1143098747912466482/tent.png?width=701&height=701">
+    <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="https://https://fonts.cdnfonts.com/css/gt-maru">
 <link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
     <title>Privacy Policy | Camphouse</title>
@@ -38,10 +38,10 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="https://cdn.discordapp.com/attachments/742574117735235644/1145255906272104458/tent2.png" alt="Logo">
+            <img src="img/icon.png" alt="Logo">
         </div>
         <h1>Privacy Policy</h1>
-        <i>Last Updated September, 19th 2023</i>
+        <i>Last Updated September, 17th 2023</i>
         <h2>1. Introduction</h2>
 
 <p>Welcome to Camphouse's Privacy Policy. This policy outlines how we collect, use, disclose, and protect your personal information when you use our website ("Website") and associated services, applications, and features (collectively referred to as "Services"). By accessing or using our Services, you agree to the practices described in this Privacy Policy. If you do not agree with our practices, please do not use our Services.</p>
