--- a/index.html
+++ b/index.html
@@ -1,55 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/png" href="img/icon.png" />
+
+    <link
+      href="https://fonts.cdnfonts.com/css/gt-maru"
+      rel="stylesheet"
+    />
+	<link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Camphouse</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1152564234404773888/1152564331616149574/tent-v2.png">
-    <meta property="og:title" content="Camphouse">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1143365802775560202/1152554887897423872/image.png">
-    <meta property="og:url" content="https://www.camphouse.net">
-    <meta property="og:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
-    <meta property="theme-color" content="#ffc34d" />
 
-    <!-- Twitter specific meta tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@CamphouseApp"> <!-- Replace with your Twitter handle -->
-    <meta name="twitter:title" content="Camphouse">
-    <meta name="twitter:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
-    <meta name="twitter:image:src" content="https://cdn.discordapp.com/attachments/1143365802775560202/1152554887897423872/image.png">
-</html>
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
-            font-family: 'Nunito', sans-serif;
-            text-align: center;
-            color: black;
-        }
-        .container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        .logo {
-            max-width: 75%;
-            height: auto;
-        }
-        .text {
-            font-size: 34px;
-            margin-top: 20px;
-            font-weight: 800;
-        }
-    </style>
-</head>
+    <script defer src="script.js"></script>
+  </head>
   <body>
-    <div class="banner">
-        <p>⚠️ We are currently working on bringing Camphouse online, check status page for more details. (also some things may also have the Aqurila logo, whoops!)</p>
+      <div class="banner">
+        <p>⚠️ We are currently working on bringing Camphouse online, check <a href="https://status.camphouse.net">Status</a> page for more details.</p>
     </div>
     <header class="header">
       <nav class="nav">
@@ -58,7 +27,7 @@
           alt="Camphouse logo"
           class="nav__logo"
           id="logo"
-          designer="Jackson Davis (@HeyJKSN)"
+          designer="Jonas"
           data-version-number="3.0"
         />
         <ul class="nav__links">
@@ -195,5 +164,3 @@
         > 2023
       </p>
     </footer>
-</body>
-</html>
