--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/png" href="img/icon.png" />
+    <meta property="og:title" content="Camphouse">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="img/bankis-frontpage.PNG">
+    <meta property="og:url" content="https://www.camphouse.net">
+    <meta property="og:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
+    <meta property="theme-color" content="#ffc34d" />
+
+    <!-- Twitter specific meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@CamphouseApp"> <!-- Replace with your Twitter handle -->
+    <meta name="twitter:title" content="Camphouse">
+    <meta name="twitter:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
+    <meta name="twitter:image:src" content="img/bankis-frontpage.PNG">
 
     <link
       href="https://fonts.cdnfonts.com/css/gt-maru"
