--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="header">
       <nav class="nav">
         <img
-          src="img/white-logo.png"
+          src="img/black-logo.png"
           alt="Camphouse logo"
           class="nav__logo"
           id="logo"
@@ -166,7 +166,7 @@
           <a class="footer__link" href="emailto:support@camphouse.net">Contact Us</a>
         </li>
       </ul>
-      <img src="img/icon.png" alt="Logo" class="footer__logo" />
+      <img src="img/logo.png" alt="Logo" class="footer__logo" />
       <p class="footer__copyright">
         &copy;
         <a
