--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
     <meta property="og:url" content="https://www.camphouse.net">
-    <meta property="og:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
+    <meta property="og:description" content="Post something amazing ✨">
     <meta property="theme-color" content="#ffc34d" />
 
     <!-- Twitter specific meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@CamphouseApp"> <!-- Replace with your Twitter handle -->
     <meta name="twitter:title" content="Camphouse">
-    <meta name="twitter:description" content="The all-new social media experience that's sure to spark your sense of adventure! ✨">
+    <meta name="twitter:description" content="Post something amazing ✨">
     <meta name="twitter:image:src" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
 
     <link
