--- a/test-index.html
+++ b/test-index.html
@@ -7,7 +7,7 @@
     <title>Camphouse | Post something amazing. ✨</title>
 
     <!-- External CSS file -->
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 	<!-- GT Maru & New Spirit fonts -->
 	<link href="https://fonts.cdnfonts.com/css/gt-maru" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
