--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
 <div class="banner">
-        <p>🔧 We are upgrading the Camphouse Homepage later tonight, some designs may look different or webpages may not load <a href="https://camphouse.freshstatus.io/incident/388826">read more</a> for details.</p>
+        <p>🔧 We are upgrading the Camphouse Homepage later tonight, some designs may look different or webpages may not load. <a href="https://camphouse.freshstatus.io/incident/388826">Read more</a> for details.</p>
     </div>
     <header class="header">
       <nav class="nav">
