--- a/test-index.html
+++ b/test-index.html
@@ -84,8 +84,8 @@
 
           <div class="hero-btn-group">
             <a href="" class="btn btn-large btn-light">
-              <i class="bx bx-download"></i> Download Desktop Client
-            </a> <a href="app.camphouse.net" class="btn btn-large btn-dark">
+              <i disabled class="bx bx-download"></i> Download Desktop Client
+            </a> <a href="https://app.camphouse.net" class="btn btn-large btn-dark">
               Open Camphouse
             </a>
           </div>
