--- a/test-index.html
+++ b/test-index.html
@@ -60,12 +60,12 @@
               <a href="/community" class="nav-link">Community Guidelines</a>
             </li>
             <li class="nav-item">
-              <a href="/corp" class="nav-link">Coporate</a>
+              <a href="https://corp.camphouse.net" class="nav-link">Coporate</a>
             </li>
           </ul>
 
           <div class="nav-item-right">
-            <a href="/login" class="btn btn-small btn-light btn-login">Login</a>
+            <a href="https://app.camphouse.net/login" class="btn btn-small btn-light btn-login">Login</a>
             <span class="mobile-toogle">
               <i class="bx bx-menu btn-open"></i>
               <i class="bx bx-x btn-close"></i>
@@ -227,7 +227,7 @@
           <a href="index.html" class="logo">
             <img src="https://www.camphouse.net/img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
-        <a href="#" class="btn btn-small btn-brand btn-login">Sign Up</a>
+        <a href="https://app.camphouse.net/signup" class="btn btn-small btn-brand btn-login">Sign Up</a>
       </div>
     </footer>
     <!---footer end-->
