--- a/test-index.html
+++ b/test-index.html
@@ -197,7 +197,7 @@
         <div class="footer-links-group">
           <h5 class="footer-title">Product</h5>
           <a href="<!--download link-->" class="footer-link">Download</a>
-          <a href="status.camphouse.net" class="footer-link">Status</a>
+          <a href="https://status.camphouse.net" class="footer-link">Status</a>
         </div>
 
         <div class="footer-links-group">
