--- a/index.html
+++ b/index.html
@@ -29,14 +29,42 @@
     <meta name="twitter:description" content="Post something amazing ✨">
     <meta name="twitter:image:src" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
 
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'GT Maru', sans-serif;
+            background-color: #f8f8f8;
+        }
+        .banner {
+            background-color: #f15e62;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px;
+            font-size: 18px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 9999;
 
+        }
+        .banner a {
+            color: white;
+            font-weight: bold;
+            text-decoration: underline;
+        }
+    </style>
     <!-- box icon links -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
   </head>
   <body>
-       <section class="hero-dark">
+    <div class="banner">
+        <p>You might notice some changes to the Camphouse website at the moment, we are currently working towards making everything look good, we promise!</p>
+    </div>
+       <section class="hero">
       <header class="main-header container">
         <nav class="main-nav">
           <a href="index.html" class="logo">
