--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             text-align: center;
             padding: 10px;
             font-size: 18px;
-            position: fixed;
+            position: ;
             top: 0;
             left: 0;
             width: 100%;
