--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
     <section class="voice-channel">
       <div class="row container">
         <img
-          src="https://static.wikia.nocookie.net/dank_memer/images/2/2f/Tumbleweed.gif/revision/latest/thumbnail/width/360/height/360?cb=20220903163826"
+          src="/img/Tumbleweed.gif"
           alt="Nothin' but Tumbleweed"
           class="grid-image order-2"
           		  />
