--- a/branding.html
+++ b/branding.html
@@ -83,7 +83,7 @@
 
 
           <div class="hero-btn-group">
-            <a disabled href="https://cdn.discordapp.com/attachments/1152564234404773888/1152882258844336158/Camphouse-Branding-Kit.zip" class="btn btn-large btn-dark">
+            <a disabled href="https://github.com/tyler-Github/AqurillaLanding/raw/main/branding/branding-kit.zip" class="btn btn-large btn-dark">
               <i class="bx bx-download"></i> Download Camphouse Branding
             </a>
           </div>
@@ -109,7 +109,7 @@
           <p>
             Here are a varient of Logos with and without the Tent Icon
           </p>
-		              <a disabled href="https://cdn.discordapp.com/attachments/1152564234404773888/1152881240576364675/Icons.zip" class="btn btn-large btn-dark">
+		              <a disabled href="https://github.com/tyler-Github/AqurillaLanding/raw/main/branding/logos.zip" class="btn btn-large btn-dark">
               <i class="bx bx-download"></i> Download Logos
             </a>
         </div>
@@ -136,7 +136,7 @@
           <p>
             Here are a varient of Logos with and without the Tent Icon
           </p>
-		              <a disabled href="https://cdn.discordapp.com/attachments/1152564234404773888/1152881240874172466/Logos.zip" class="btn btn-large btn-dark">
+		              <a disabled href="https://github.com/tyler-Github/AqurillaLanding/raw/main/branding/icons.zip" class="btn btn-large btn-dark">
               <i class="bx bx-download"></i> Download Icons
             </a>
         </div>
@@ -158,7 +158,7 @@
           <p>
             Drop your eyedropper into our colour pallet (Photoshop Swatches included)
           </p>
-		              <a disabled href="https://cdn.discordapp.com/attachments/1152564234404773888/1152881241197125632/Swatches.zip" class="btn btn-large btn-dark">
+		              <a disabled href="https://github.com/tyler-Github/AqurillaLanding/raw/main/branding/swatches.zip" class="btn btn-large btn-dark">
               <i class="bx bx-download"></i> Download Swatches
             </a>
         </div>
