--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://use.typekit.net/kdj5lxu.css">
     <!-- Favicon -->
     <link rel="icon" href="img/icon.png" />
-	
+	<meta name="google-site-verification" content="0BgvK93HL6c4z1CPMHYuWYLl7rkd9huccT4fE1V2ydQ" />
 	<!-- OG Meta Properties -->
 	<meta property="og:title" content="Camphouse">
     <meta property="og:type" content="website">
