--- a/test-index.html
+++ b/test-index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Camphouse | Post something amazing. ✨</title>
-
+    <meta name="google-site-verification" content="0BgvK93HL6c4z1CPMHYuWYLl7rkd9huccT4fE1V2ydQ" />
     <!-- External CSS file -->
     <link rel="stylesheet" href="styles.css" />
 	<!-- GT Maru & New Spirit fonts -->
