--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
           <div class="hero-btn-group">
-            <a disabled href="" class="btn btn-large btn-light">
+            <a disabled href="https://aqurilladownload.rollviral.repl.co/download" class="btn btn-large btn-light">
               <i class="bx bx-download"></i> Download Desktop Client
             </a> <a href="https://app.camphouse.net" class="btn btn-large btn-dark">
               Open Camphouse
@@ -186,7 +186,7 @@
     <section class="download">
       <div class="row container remove-grid">
         <h2>Start camping!</h2>
-        <a href="#" class="btn btn-large btn-brand">
+        <a href="https://aqurilladownload.rollviral.repl.co/download" class="btn btn-large btn-brand">
           <i class="bx bx-download"></i>Download the Camphouse Desktop client
         </a>
       </div>
@@ -221,7 +221,7 @@
 
         <div class="footer-links-group">
           <h5 class="footer-title">Product</h5>
-          <a href="<!--download link-->" class="footer-link">Download</a>
+          <a href="https://aqurilladownload.rollviral.repl.co/download" class="footer-link">Download</a>
           <a href="https://status.camphouse.net" class="footer-link">Status</a>
         </div>
 
