--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="<!--donwload link -->" class="nav-link">Download</a>
+              <a href="https://aqurilladownload.rollviral.repl.co/download" class="nav-link">Download</a>
             </li>
             <li class="nav-item">
               <a href="https://blog.camphouse.net" class="nav-link">Blog</a>
