--- a/branding.html
+++ b/branding.html
@@ -17,7 +17,7 @@
 	<!-- OG Meta Properties -->
 	<meta property="og:title" content="Camphouse">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
+    <meta property="og:image" content="img/bankis-frontpage.PNG">
     <meta property="og:url" content="https://www.camphouse.net">
     <meta property="og:description" content="Post something amazing ✨">
     <meta property="theme-color" content="#ffc34d" />
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@CamphouseApp"> <!-- Replace with your Twitter handle -->
     <meta name="twitter:title" content="Camphouse">
     <meta name="twitter:description" content="Post something amazing ✨">
-    <meta name="twitter:image:src" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
+    <meta name="twitter:image:src" content="img/bankis-frontpage.PNG">
 
 
     <!-- box icon links -->
@@ -40,7 +40,7 @@
       <header class="main-header container">
         <nav class="main-nav">
           <a href="index.html" class="logo">
-            <img src="https://www.camphouse.net/img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
+            <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
 
           <ul class="nav-list">
@@ -96,11 +96,11 @@
     <section class="voice-channel">
       <div class="row container">
         <img
-          src="https://www.camphouse.net/img/logo.png"
+          src="img/logo.png"
           alt="A comment from Camphouse"
           class="grid-image order-2" />
 		<img
-          src="https://www.camphouse.net/img/black-logo.png"
+          src="img/black-logo.png"
           alt="A comment from Camphouse"
           class="grid-image order-2" />
 
@@ -222,7 +222,7 @@
 
       <div class="row container remove-grid">
           <a href="index.html" class="logo">
-            <img src="https://www.camphouse.net/img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
+            <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
         <a href="https://app.camphouse.net/signup" class="btn btn-small btn-brand btn-login">Sign Up</a>
       </div>
