--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- OG Meta Properties -->
 	<meta property="og:title" content="Camphouse">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
+    <meta property="og:image" content="img/bankis-frontpage.PNG">
     <meta property="og:url" content="https://www.camphouse.net">
     <meta property="og:description" content="Post something amazing ✨">
     <meta property="theme-color" content="#ffc34d" />
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@CamphouseApp"> <!-- Replace with your Twitter handle -->
     <meta name="twitter:title" content="Camphouse">
     <meta name="twitter:description" content="Post something amazing ✨">
-    <meta name="twitter:image:src" content="https://www.camphouse.net/img/bankis-frontpage.PNG">
+    <meta name="twitter:image:src" content="img/bankis-frontpage.PNG">
 
     <style>
         body {
@@ -65,7 +65,7 @@
       <header class="main-header container">
         <nav class="main-nav">
           <a href="index.html" class="logo">
-            <img src="https://www.camphouse.net/img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
+            <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
 
           <ul class="nav-list">
@@ -122,7 +122,7 @@
     <!--collaboration section start-->
     <section class="collaboration">
       <div class="row container">
-        <img src="https://www.camphouse.net/img/post.png" alt="Cheese is £10 now???" class="grid-image" />
+        <img src="img/post.png" alt="Cheese is £10 now???" class="grid-image" />
         <div class="text-group">
           <h2 class="text secondary-title">
             Make picaso-like posts
@@ -141,7 +141,7 @@
     <section class="voice-channel">
       <div class="row container">
         <img
-          src="https://www.camphouse.net/img/comment.png"
+          src="img/comment.png"
           alt="A comment from Camphouse"
           class="grid-image order-2" />
         <div class="text-group order-1">
@@ -177,7 +177,7 @@
             Engage with the digital world like never before! Whether you're posting your thoughts, sharing a stunning pic, dropping a witty comment, or spreading the love with a like or share, it's all about embracing the social experience. Dive into the content you're passionate about, connect with friends and influencers, and make your online presence truly shine. So, why wait? Post, comment, like, share - the digital playground is yours to explore, so go ahead and do it all!
           </p>
         </div>
-        <img src="https://www.camphouse.net/img/hero.png" alt="Example Posts" class="grid-image" />
+        <img src="img/hero.png" alt="Example Posts" class="grid-image" />
       </div>
     </section>
     <!--video call section end-->
@@ -249,7 +249,7 @@
 
       <div class="row container remove-grid">
           <a href="index.html" class="logo">
-            <img src="https://www.camphouse.net/img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
+            <img src="img/white-logo.png" alt="Camphouse Logo" class="logo-img" />
           </a>
         <a href="https://app.camphouse.net/signup" class="btn btn-small btn-brand btn-login">Sign Up</a>
       </div>
